views/styles/styles.css
body  {
  background-color: #f5f5f5;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.background-accent-green {
  background: #92cc6f;
  width: 100%;
  height: 500px;
  -webkit-transform: skewY(-20deg);
  transform: skewY(-20deg);
  position: absolute;
  z-index: -255;
  top: 200px;
  display: block;
}

/*----list----*/

#country-list {
  list-style-type: none;
}

#country-list > li {
  margin-bottom: 10px;
}

#country-list > li > ul {
  list-style-type: none;
  padding-left: 20px;
}

#country-list > li > ul > li {
  margin-bottom: 5px;
}

#country-list > li > ul > li > ul {
  list-style-type: none;
  padding-left: 40px;
}

a {
  text-decoration: none;
  color: black;
}

table, th, td {
  border: 1px solid;
}

